--- a/web/index.html
+++ b/web/index.html
@@ -10,7 +10,7 @@
             function draw() {
                 var config = {
                     container_id: "viz",
-                    server_url: "bolt://neo4j:7687",
+                    server_url: "bolt://nlc_neo4j_neo4j:7687",
                     server_user: "neo4j",
                     server_password: "neo4j",
                     labels: {
