Some important changes to make the thing work properly with communicating between containers

--- a/web/index.html
+++ b/web/index.html
@@ -26,7 +26,7 @@
                             "caption": false
                         }
                     },
-                    initial_cypher: "MATCH (n)-[r:INTERACTS]->(m) RETURN *"
+                    initial_cypher: "MATCH (n) RETURN *"
                 };
     
                 viz = new NeoVis.default(config);
